Refactored the server into a docker container

--- a/discordbot/Dockerfile
+++ b/discordbot/Dockerfile
@@ -4,9 +4,13 @@ FROM --platform=linux/amd64 python:3.9-slim
 RUN python -m ensurepip --upgrade
 RUN pip install py-cord boto3 mcstatus
 
-RUN apt-get update && apt-get install -y nano
+RUN apt-get update && apt-get install -y nano curl
 
 COPY bot /app/bot
+COPY container-init.sh /app/container-init.sh
+# Proper .env files must start with #.env
+COPY .env /app/.env
 
 WORKDIR /app
-CMD ["python", "bot/src/bot.py"]
+RUN chmod +x ./container-init.sh
+CMD ["./container-init.sh"]
