Allow bot to load state if server is already running

--- a/discordbot/Dockerfile
+++ b/discordbot/Dockerfile
@@ -2,7 +2,7 @@ FROM --platform=linux/amd64 python:3.9-slim
 
 # Install pip
 RUN python -m ensurepip --upgrade
-RUN pip install py-cord boto3 mcstatus
+RUN pip install py-cord boto3 mcstatus docker
 
 RUN apt-get update && apt-get install -y nano curl docker.io
 
