--- a/discordbot/example/aws_ec2.yaml
+++ b/discordbot/example/aws_ec2.yaml
@@ -19,6 +19,7 @@ services:
       - DISCORD_DEBUG_GUILD_IDS=
 
       - SERVER_ADDRESS=dewcraft.duckdns.org
+      - SERVER_TYPE=bedrock
       - SERVER_PORT_JAVA=25565
       - SERVER_PORT_BEDROCK=19132
       - SERVER_MAP_PORT=8192
